--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
 			<p><b>Frontend UI:</b> Globant - 2014 to 2016</p>
 			<p><b>Frontend UI:</b> Zemoga - 2017 to 2019</p>
 			<p><b>Full Stack:</b> Learn by LOCI - 2019 to 2021</p>
+			<p><b>Frontend UI:</b> Backbase - 2021 to 2022</p>
+			<p><b>Full Stack:</b> Freelancer - 2022 to 2023</p>
 		</div>
 		<div class="cg-col-general cg-col-data animated fadeInRight hide">
 			<h2>Portfolio</h2>
